[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
package_dir = "xmlstreamer"
packages = ["xmlstreamer"]

[project]
name = "xmlstreamer"
version = "1.0.0"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Python library to parse XML data directly from HTTP, HTTPS, or FTP sources without loading the entire file into memory, supporting decompression, encoding detection, tag-based itemization, and optional filtering."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
license = {text = "MIT License"}
keywords = ["xml", "streaming", "parser", "lightweight", "http", "https", "ftp"]
readme = "README.md"
requires-python = ">=3.10"
dependencies=[
    "defusedxml==0.7.1",
    "chardet==5.2.0",
    "requests==2.28.0",
    "attrs==23.2.0",
    "attrs-strict==1.0.1"
]

[project.urls]
repository = "https://github.com/carlosplanchon/xmlstreamer.git"
